--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IHasGame.cs" />
     <Compile Include="Aphorism.cs" />
+    <Compile Include="AuthorAphorism.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="News.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="DbContext.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepoAuthorAphorism.cs" />
     <Compile Include="Repositories\RepoAphorism.cs" />
     <Compile Include="Repositories\RepoArticle.cs" />
     <Compile Include="Repositories\RepoBannerGroup.cs" />
