--- a/GE.WebAdmin/packages.config
+++ b/GE.WebAdmin/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
   <package id="T4MVC" version="3.17.4" targetFramework="net46" />
   <package id="T4MVCExtensions" version="3.17.4" targetFramework="net46" />
 </packages>
