--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -9,8 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />
-    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0103269_gameexecom;Persist Security Info=True;User ID=sa;Password=Luia124445#" />-->
+    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />-->
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=u0103269_gameexecom;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -26,6 +26,9 @@
     <add key="FacebookOAuthClientSecret" value="637f770e3d4a758744685093333ce5a0" />
     <add key="GoogleOAuthClientId" value="21529473011-0amhi41mdlb572ftfv0ahjeatin4m2mn.apps.googleusercontent.com" />
     <add key="GoogleOAuthClientSecret" value="oFzZLzCeHTEnqRsyAytFt7ng" />
+    <!--smtp-->
+    <add key="NoReplyMail" value="noreply@game-exe.com"/>
+    <add key="NoReplyMailPassword" value="Luia124445#game-exe.com"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
