--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -202,14 +202,13 @@
     <Compile Include="MaterialTagsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="MenuesController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Abstract\VMLastMaterial.cs" />
     <Compile Include="Models\VMAphorismCategory.cs" />
     <Compile Include="Models\VMAuthorAphorism.cs" />
     <Compile Include="Models\VMDetailAphorism.cs" />
     <Compile Include="Models\VMAphorism.cs" />
+    <Compile Include="Models\VMDetailGame.cs" />
+    <Compile Include="Models\VMDetailGameMaterial.cs" />
     <Compile Include="Models\VMEditSiteQuetion.cs" />
     <Compile Include="Models\VMLastNews.cs" />
     <Compile Include="Models\VMLCNB.cs" />
@@ -285,7 +284,6 @@
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt.settings.xml" />
     <Content Include="packages.config" />
-    <None Include="Scripts\_references.js" />
     <Content Include="share42\icons.png" />
     <Content Include="share42\share42.js" />
     <Content Include="Views\Articles\List.cshtml">
@@ -357,7 +355,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
-    <Content Include="Views\Menues\_MenuItems.cshtml" />
     <Content Include="Views\Games\_GameList.cshtml" />
     <Content Include="Views\News\_LastNewsBlock.cshtml" />
     <Content Include="Views\Articles\_ForGamersBlock.cshtml" />
@@ -416,6 +413,9 @@
     <Content Include="Views\Comments\_List.cshtml" />
     <Content Include="Views\Comments\DisplayTemplates\VMComment.cshtml" />
     <Content Include="Views\SiteQuetions\Edit.cshtml" />
+    <Content Include="Views\Games\Details.cshtml" />
+    <Content Include="Views\Games\_DetailGameMaterials.cshtml" />
+    <Content Include="Views\Games\DisplayTemplates\VMDetailGameMaterial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
