--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -251,6 +251,8 @@
     <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Controllers\SiteTestBlocksController.cs" />
+    <Compile Include="Controllers\SiteTestsController.cs" />
     <Compile Include="Controllers\VideoLinksController.cs" />
     <Compile Include="Controllers\VideosController.cs" />
     <Compile Include="Controllers\SeoInfoController.cs" />
@@ -319,6 +321,8 @@
     <Compile Include="Models\VMEditManual.cs" />
     <Compile Include="Models\VMEditMaterialCategory.cs" />
     <Compile Include="Models\VMEditProjectStep.cs" />
+    <Compile Include="Models\VMEditSiteTest.cs" />
+    <Compile Include="Models\VMEditSiteTestBlock.cs" />
     <Compile Include="Models\VMEditVideo.cs" />
     <Compile Include="Models\VMEmployee.cs" />
     <Compile Include="Models\VMFAQ.cs" />
@@ -356,6 +360,8 @@
     <Compile Include="Models\VMSeoInfo.cs" />
     <Compile Include="Models\VMSeoKeyword.cs" />
     <Compile Include="Models\VMSiteSettings.cs" />
+    <Compile Include="Models\VMSiteTest.cs" />
+    <Compile Include="Models\VMSiteTestBlock.cs" />
     <Compile Include="Models\VMStatisticUserLogin.cs" />
     <Compile Include="Models\VMUser.cs" />
     <Compile Include="Models\VMVideo.cs" />
@@ -391,6 +397,12 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="SharedController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SiteTestBlocksController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SiteTestsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="StatisticsController.generated.cs">
@@ -515,6 +527,12 @@
     <Content Include="Views\Employees\_GridView.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\SiteTests\_GridView.cshtml" />
+    <Content Include="Views\SiteTests\Edit.cshtml" />
+    <Content Include="Views\SiteTests\Index.cshtml" />
+    <Content Include="Views\SiteTestBlocks\_GridView.cshtml" />
+    <Content Include="Views\SiteTestBlocks\Edit.cshtml" />
+    <Content Include="Views\SiteTestBlocks\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
