--- a/SX.WebCore/packages.config
+++ b/SX.WebCore/packages.config
@@ -16,4 +16,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
 </packages>
