--- a/GE.WebUI/bower.json
+++ b/GE.WebUI/bower.json
@@ -26,6 +26,7 @@
     "font-awesome": "4.6.3",
     "jquery-validation": "1.15.0",
     "jquery-ajax-unobtrusive": "3.2.4",
-    "jquery-validation-unobtrusive": "3.2.6"
+    "jquery-validation-unobtrusive": "3.2.6",
+    "jquery-lazy": "1.6.7"
   }
 }
